<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Gear Shift</string>
    <string name="title_torrent_detail">Torrent Detail</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="move">Move</string>
    <string name="verify">Verify local data</string>
    <string name="reannounce">Request more peers</string>
    <string name="replace">Replace</string>
    <string name="copy">Copy</string>
    <string name="number_dialog_delete">Delete a digit</string>
    <string name="refresh">Refresh</string>
    <string name="alt_speed_label_on">Alternate speed limit on</string>
    <string name="alt_speed_label_off">Alternate speed limit off</string>
    <string name="alt_speed">Alternate speed limit</string>
    <string name="add_torrent">Add torrent</string>
    <string name="settings">Settings</string>
    <string name="torrent_overview">Overview</string>
    <string name="torrent_files">Files</string>
    <string name="torrent_limits">Limits</string>
    <string name="torrent_trackers">Trackers</string>
    <string name="torrent_activity">Activity</string>
    <string name="torrent_have">Have:</string>
    <string name="torrent_downloaded">Downloaded:</string>
    <string name="torrent_uploaded">Uploaded:</string>
    <string name="torrent_state">State:</string>
    <string name="torrent_running_time">Running time:</string>
    <string name="torrent_remaining_time">Remaining time:</string>
    <string name="torrent_last_activity">Last activity:</string>
    <string name="torrent_error">Torrent error:</string>
    <string name="torrent_details">Details</string>
    <string name="torrent_size">Size:</string>
    <string name="torrent_hash">Hash:</string>
    <string name="torrent_location">Location:</string>
    <string name="torrent_privacy">Privacy:</string>
    <string name="torrent_origin">Origin:</string>
    <string name="torrent_comment">Comment:</string>
    <string name="torrent_bandwidth">Bandwidth</string>
    <string name="torrent_global_limits">Honor global limits</string>
    <string-array name="torrent_priority">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
    </string-array>
    <string name="torrent_queue_position">Queue position:</string>
    <string name="torrent_limit_download">Limit Download Speed (KiB/s)</string>
    <string name="torrent_limit_upload">Limit Upload Speed (KiB/s)</string>
    <string name="torrent_limit_speed_amount">Amount</string>
    <string name="torrent_seeding">Seeding</string>
    <string-array name="torrent_seed_ratio_mode">
        <item>Use global settings</item>
        <item>Stop seeding at ratio</item>
        <item>Seed regardless of ratio</item>
    </string-array>
    <string name="torrent_seed_ratio_limit">Seed ratio limit:</string>
    <string name="torrent_peers">Peers</string>
    <string name="torrent_peer_limit">Peer limit:</string>
    <string name="add_profile_option">Add profile</string>
    <string name="header_label_general_preferences">General</string>
    <string name="header_label_filters">Filters</string>
    <string name="header_label_sort">Sorting options</string>
    <string name="header_label_profiles">Profiles</string>
    <string name="new_profile">New profile</string>
    <string name="profile_directories">Profile directories</string>
    <string name="add_directory_option">Add directory</string>
    <string name="no_download_dirs">&lt;h2&gt;You have no extra download directories.&lt;/h2&gt;Adding some here will allow you to change the location of any torrent in this profile.</string>
    <string name="updates">Updates</string>
    <string name="full_update">Full update</string>
    <string name="full_update_summary_format">Every %1$d active updates</string>
    <string name="update_interval_dialog_title">Update interval</string>
    <string name="update_interval">Update interval</string>
    <string name="update_interval_summary_format">%1$s</string>
    <string name="session_update_interval">Session update interval</string>
    <string name="profile">Profile</string>
    <string name="profile_summary_format">%1$s</string>
    <string name="profile_name">Name</string>
    <string name="profile_name_default">Default</string>
    <string name="connection">Connection</string>
    <string name="con_host">Host</string>
    <string name="con_port">Port</string>
    <string name="con_username">Username</string>
    <string name="con_password">Password</string>
    <string name="con_path">Path</string>
    <string name="con_path_default">/transmission/rpc</string>
    <string name="con_use_ssl">Use SSL</string>
    <string name="con_timeout">Timeout</string>
    <string name="con_timeout_default">40</string>
    <string name="con_retries">Retry</string>
    <string name="con_use_proxy">Use Proxy</string>
    <string name="con_proxy_host">Proxy Host</string>
    <string name="con_proxy_port">Proxy Port</string>
    <string name="con_directories">Download Directories</string>
    <string name="invalid_input_title">Invalid Input</string>
    <string name="con_name_cannot_be_empty">The profile name cannot be empty</string>
    <string name="con_host_cannot_be_empty">The host cannot be empty</string>
    <string name="con_port_not_valid">The port value must be between 1 and 65535</string>
    <string name="con_proxy_host_cannot_be_empty">The proxy host cannot be empty</string>
    <string name="con_proxy_port_not_valid">The proxy port value must be between 1 and 65535</string>
    <string name="no_profiles">No profiles</string>
    <string name="create_profile_in_settings">Create a new profile in the settings</string>
    <string name="no_profiles_empty_list"><![CDATA[<h2>No profile seems to have been created yet.</h2>You can add profiles by visiting the <i>settings</i> in the navigation drawer, or by pressing the button below.]]></string>
    <string name="connecting_empty_list"><![CDATA[<h2><font color="#666666">Connecting</font></h2>]]></string>
    <string name="no_torrents_empty_list">&lt;h2&gt;You are connected!&lt;/h2&gt;You may want to add at least one torrent.</string>
    <string name="no_filtered_torrents_empty_list">No torrents match the current filter</string>
    <string name="no_connectivity_empty_list">&lt;h2&gt;&lt;font color="#cc0000"&gt;You need an active network connection!&lt;/font&gt;&lt;/h2&gt;</string>
    <string name="access_denied_empty_list">&lt;h2&gt;&lt;font color="#cc0000"&gt;Access denied!&lt;/font&gt;&lt;/h2&gt;Your credentials might be incorrect, or your IP address might not be in the daemon\'s white list.</string>
    <string name="no_json_empty_list">&lt;h2&gt;&lt;font color="#cc0000"&gt;Unexpected response!&lt;/font&gt;&lt;/h2&gt;Please check if the RPC path in your current profile is correct.</string>
    <string name="no_connection_empty_list">&lt;h2&gt;&lt;font color="#cc0000"&gt;Unable to connect!&lt;/font&gt;&lt;/h2&gt;Please check if the server address and port in your current profile are correct.</string>
    <string name="generic_http_empty_list"><![CDATA[<h2><font color="#cc0000>HTTP client error!</font></h2>The HTTP status is '%1$s %2$s'.]]></string>
    <string name="thread_error_empty_list">&lt;h2&gt;&lt;font color="#cc0000"&gt;Internal error!&lt;/font&gt;&lt;/h2&gt;</string>
    <string name="response_error_empty_list">&lt;h2&gt;&lt;font color="#cc0000"&gt;Transmission daemon error!&lt;/font&gt;&lt;/h2&gt;A request to the daemon was not successful. See the logcat for more details.</string>
    <string name="timeout_empty_list"><![CDATA[<h2><font color="#cc0000>Connection timeout!</font></h2>]]></string>
    <string name="about_item">About</string>
    <string name="ic_menu_select_all">Select All</string>
    <string name="menu_high_priority">High priority</string>
    <string name="menu_normal_priority">Normal priority</string>
    <string name="menu_low_priority">Low priority</string>
    <string name="menu_filters_all">All</string>
    <string name="menu_filters_downloading">Downloading</string>
    <string name="menu_filters_seeding">Seeding</string>
    <string name="menu_filters_paused">Paused</string>
    <string name="menu_filters_complete">Complete</string>
    <string name="menu_filters_incomplete">Incomplete</string>
    <string name="menu_filters_active">Active</string>
    <string name="menu_filters_checking">Checking</string>
    <string name="menu_filters_errors">Errors</string>
    <string name="menu_sort_name">Name</string>
    <string name="menu_sort_size">Size</string>
    <string name="menu_sort_status">Status</string>
    <string name="menu_sort_activity">Activity</string>
    <string name="menu_sort_age">Age</string>
    <string name="menu_sort_progress">Progress</string>
    <string name="menu_sort_ratio">Ratio</string>
    <string name="menu_sort_location">Location</string>
    <string name="menu_sort_peers">Peers</string>
    <string name="menu_sort_download_speed">Download speed</string>
    <string name="menu_sort_upload_speed">Upload speed</string>
    <string name="menu_sort_queue">Queue position</string>
    <string name="menu_order_descending">Descending</string>
    <string name="filter_visibility">Filter visibility</string>
    <string name="directory_filters">Directory filters</string>
    <string name="show_directory_filters">Show directory filters</string>
    <string name="tracker_filters">Tracker filters</string>
    <string name="show_tracker_filters">Show tracker filters</string>
    <string name="show_untracked_filter">Show untracked filter</string>
    <string name="show_all_filter_summary">If hidden, clicking on a selected filter will unselect it</string>
    <string name="developer_options">Developer options</string>
    <string name="debug">Debug</string>
    <string name="debug_summary">Display debug information in the logcat</string>
    <string name="auto_update_check">Check for updates at startup</string>
    <string name="unwant_file">Skip</string>
    <string name="want_file">Download</string>
    <string name="session_settings_item">Session settings</string>
    <string name="session_settings_bandwidth">Bandwidth</string>
    <string name="session_settings_general_limits">General limits</string>
    <string name="session_settings_down_limit">Download limit (KiB/s)</string>
    <string name="session_settings_upload_limit">Upload limit (KiB/s)</string>
    <string name="session_settings_alt_limits">Alternate limits</string>
    <string name="session_settings_enable_alt_limits">Enable alternate speed limits</string>
    <string name="session_settings_alt_time_range">Alternate time range</string>
    <string name="session_settings_alt_time">Time</string>
    <string name="session_settings_alt_limit_time_format">%1$02d:%2$02d</string>
    <string name="session_settings_upload">Upload (KiB/s)</string>
    <string name="session_settings_download">Download (KiB/s)</string>
    <string name="find">Find</string>
    <string name="user_interface_header">User interface</string>
    <string name="show_status_bar">Status bar below the torrent list</string>
    <string name="show_add_dialog">Show options dialog when adding torrents</string>
    <string name="sort">Sort</string>
    <string name="queue_top">Move to the top of the queue</string>
    <string name="queue_up">Move up from the current position</string>
    <string name="queue_down">Move down from the current position</string>
    <string name="queue_bottom">Move to the bottom of the queue</string>
    <string name="pref_profile_color">Profile color</string>
    <string name="misc">Miscellaneous</string>
    <string name="delete_data_default">Delete the torrent data during removal by default</string>
</resources>