<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/find"
          android:icon="@drawable/ic_search_white_24dp"
          android:title="@string/find"
          app:actionViewClass="android.support.v7.widget.SearchView"
          app:showAsAction="ifRoom|collapseActionView"
          android:visible="false"/>

    <item android:id="@+id/sort"
          android:title="@string/sort"
          android:icon="@drawable/ic_sort_white_24dp"
          app:showAsAction="ifRoom"
          android:visible="false">

        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/sort_name" android:title="@string/menu_sort_name"/>
                <item android:id="@+id/sort_size" android:title="@string/menu_sort_size"/>
                <item android:id="@+id/sort_status" android:title="@string/menu_sort_status"/>
                <item android:id="@+id/sort_activity" android:title="@string/menu_sort_activity"/>
                <item android:id="@+id/sort_age" android:title="@string/menu_sort_age"/>
                <item android:id="@+id/sort_progress" android:title="@string/menu_sort_progress"/>
                <item android:id="@+id/sort_ratio" android:title="@string/menu_sort_ratio"/>
                <item android:id="@+id/sort_location" android:title="@string/menu_sort_location"/>
                <item android:id="@+id/sort_peers" android:title="@string/menu_sort_peers"/>
                <item android:id="@+id/sort_download_speed" android:title="@string/menu_sort_download_speed"/>
                <item android:id="@+id/sort_upload_speed" android:title="@string/menu_sort_upload_speed"/>
                <item android:id="@+id/sort_queue" android:title="@string/menu_sort_queue"/>
            </group>

            <item android:id="@+id/sort_order" android:title="@string/menu_order_descending" android:checkable="true"/>
        </menu>

    </item>
</menu>
