<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
     <PreferenceCategory android:title="@string/updates" >
         <CheckBoxPreference
             android:key="auto_update_check"
             android:title="@string/auto_update_check"
             android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/user_interface_header">

        <CheckBoxPreference
            android:key="show_status"
            android:title="@string/show_status_bar"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="show_add_dialog"
            android:title="@string/show_add_dialog"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="delete_data"
            android:title="@string/delete_data_default"
            android:defaultValue="false" />

    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/developer_options">
        
        <CheckBoxPreference
            android:key="debug"
            android:title="@string/debug"
            android:summary="@string/debug_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
