<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<PreferenceCategory android:title="@string/profile">
	    <EditTextPreference
	        android:key="profile_name"
	        android:defaultValue="@string/profile_name_default"
	        android:title="@string/profile_name"
	        android:dialogTitle="@string/profile_name" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/connection">
	    <EditTextPreference
	        android:key="profile_host"
	        android:defaultValue="192.168.0.1"
	        android:inputType="textNoSuggestions|textVisiblePassword"
	        android:title="@string/con_host"
	        android:dialogTitle="@string/con_host" />
	    <EditTextPreference
	        android:key="profile_port"
	        android:defaultValue="9091"
	        android:title="@string/con_port"
	        android:inputType="number"
	        android:dialogTitle="@string/con_port" />
  	    <EditTextPreference
	        android:key="profile_path"
	        android:defaultValue="@string/con_path_default"
	        android:inputType="textNoSuggestions|textVisiblePassword"
	        android:title="@string/con_path"
	        android:dialogTitle="@string/con_path" />
	    <EditTextPreference
	        android:key="profile_username"
	        android:defaultValue=""
	        android:inputType="textNoSuggestions|textVisiblePassword"
	        android:title="@string/con_username"
	        android:dialogTitle="@string/con_username" />
	    <EditTextPreference
	        android:key="profile_password"
	        android:defaultValue=""
	        android:inputType="textPassword"
	        android:title="@string/con_password"
	        android:dialogTitle="@string/con_password" />
	    <CheckBoxPreference
	        android:key="profile_use_ssl"
	        android:defaultValue="false"
	        android:title="@string/con_use_ssl" />
	    <EditTextPreference
	        android:key="profile_timeout"
	        android:defaultValue="@string/con_timeout_default"
	        android:title="@string/con_timeout"
	        android:inputType="number"
	        android:dialogTitle="@string/con_timeout" />
            <!--
	    <ListPreference
	        android:key="profile_retries"
	        android:title="@string/con_retries"
	        android:dialogTitle="@string/con_retries"
	        android:entries="@array/pref_con_retries_entries"
	        android:entryValues="@array/pref_con_retries_values"
	        android:defaultValue="3" />-->

        <CheckBoxPreference
            android:key="profile_use_proxy"
            android:defaultValue="false"
            android:title="@string/con_use_proxy" />
        <EditTextPreference
            android:key="profile_proxy_host"
            android:defaultValue=""
            android:dependency="profile_use_proxy"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:title="@string/con_proxy_host"
            android:dialogTitle="@string/con_proxy_host" />
        <EditTextPreference
            android:key="profile_proxy_port"
            android:defaultValue="8080"
            android:dependency="profile_use_proxy"
            android:title="@string/con_proxy_port"
            android:inputType="number"
            android:dialogTitle="@string/con_proxy_port" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/updates" >
		<ListPreference
			android:key="profile_update_interval"
			android:title="@string/update_interval"
			android:dialogTitle="@string/update_interval_dialog_title"
			android:entries="@array/pref_update_interval_entries"
			android:entryValues="@array/pref_update_interval_values"
			android:defaultValue="1" />

        <ListPreference
            android:key="profile_full_update"
            android:title="@string/full_update"
            android:dialogTitle="@string/update_interval_dialog_title"
            android:entries="@array/pref_full_update_entries"
            android:entryValues="@array/pref_full_update_values"
            android:defaultValue="2" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/misc">
        <Preference
            android:key="profile_directories"
            android:fragment="org.sugr.gearshift.ui.settings.TransmissionProfileDirectoriesSettingsFragment"
            android:title="@string/con_directories">

        </Preference>

        <org.sugr.gearshift.ui.util.colorpicker.ColorPickerPreference
            android:defaultValue="@color/primary"
            android:key="profile_color"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_profile_color"
            app:cal_itemLayout="@layout/calendar_grid_item_color"
            app:cal_numColumns="4" />
	</PreferenceCategory>

</PreferenceScreen>
