<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/select_all"
	    android:title="@string/ic_menu_select_all"
	    android:icon="@drawable/ic_action_select_all"
	    android:showAsAction="always" />
    
    <item android:id="@+id/resume"
	    android:title="@string/resume"
	    android:icon="@drawable/ic_action_play"
	    android:showAsAction="always" />
    
    <item android:id="@+id/pause"
	    android:title="@string/pause"
	    android:icon="@drawable/ic_action_pause"
	    android:showAsAction="always" />
    
    <item android:id="@+id/remove"
	    android:title="@string/remove"
	    android:icon="@drawable/ic_action_cancel"
	    android:showAsAction="ifRoom" />
    
	<item android:id="@+id/delete"
	    android:title="@string/remove_data"
	    android:icon="@drawable/ic_action_discard"
	    android:showAsAction="ifRoom" />
	
	<item android:id="@+id/move"
	    android:title="@string/move"
	    android:icon="@drawable/ic_action_forward"
	    android:showAsAction="ifRoom" />

	<item android:id="@+id/verify"
	    android:title="@string/verify"
	    android:showAsAction="never" />

	<item android:id="@+id/reannounce"
	    android:title="@string/reannounce"
	    android:showAsAction="never" />
</menu>
