<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/select_all"
	    android:title="@string/ic_menu_select_all"
	    android:icon="@drawable/ic_select_all_white_24dp"
	    app:showAsAction="ifRoom" />
    
    <item android:id="@+id/priority_low"
	    android:title="@string/menu_low_priority"
	    android:icon="@drawable/ic_star_outline_white_24dp"
	    app:showAsAction="always" />
    
    <item android:id="@+id/priority_normal"
	    android:title="@string/menu_normal_priority"
	    android:icon="@drawable/ic_star_half_white_24dp"
	    app:showAsAction="always" />
    
    <item android:id="@+id/priority_high"
	    android:title="@string/menu_high_priority"
	    android:icon="@drawable/ic_star_white_24dp"
	    app:showAsAction="always" />
    
    <item android:id="@+id/check_selected"
        android:title="@string/unwant_file"
        app:showAsAction="never"
        android:visible="false"/>

        
    <item android:id="@+id/uncheck_selected"
        android:title="@string/want_file"
        app:showAsAction="never"
        android:visible="false"/>
    
</menu>
