<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/resume"
        android:title="@string/resume"
        android:icon="@drawable/ic_action_play"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/pause"
        android:title="@string/pause"
        android:icon="@drawable/ic_action_pause"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/remove"
        android:title="@string/remove"
        android:icon="@drawable/ic_action_cancel"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/move"
        android:title="@string/move"
        android:icon="@drawable/ic_action_forward"
        android:menuCategory="system"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/verify"
        android:title="@string/verify"
        android:menuCategory="system"
        android:orderInCategory="10"
        app:showAsAction="never" />

    <item android:id="@+id/reannounce"
        android:title="@string/reannounce"
        android:menuCategory="system"
        android:orderInCategory="10"
        app:showAsAction="never" />
</menu>
